# ChangeLog for net-dialup/capi4k-utils
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/capi4k-utils/ChangeLog,v 1.42 2006/01/21 20:35:19 pylon Exp $

  21 Jan 2006; Lars Weiler <pylon@gentoo.org> capi4k-utils-20050509.ebuild:
  Stable on ppc; bug #112457.

  23 Dec 2005; Simon Stelling <blubb@gentoo.org>
  capi4k-utils-20050509.ebuild:
  stable on amd64

  03 Sep 2005; Stefan Briesenick <sbriesen@gentoo.org>
  -capi4k-utils-20050322-r1.ebuild, capi4k-utils-20050718-r1.ebuild:
  removed old version, fixed whitespace error.

*capi4k-utils-20050718-r1 (03 Sep 2005)

  03 Sep 2005; Stefan Briesenick <sbriesen@gentoo.org> files/capi.blacklist,
  files/capi.conf, files/capi.confd, files/capi.hotplug, files/capi.initd,
  +files/capi.pcmcia, +files/capi.pcmcia.conf, files/capi.usermap,
  metadata.xml, +capi4k-utils-20050718-r1.ebuild:
  adding lots of USE flags, checking kernel options, reworked init- and
  hotplug-scripts, added pcmcia support for kernels < 2.6.13 (new pcmcia
  support will follow soon).

  20 Jul 2005; Stefan Briesenick <sbriesen@gentoo.org> files/capi.hotplug:
  now hotplug-script looks in different locations for firmware files also
  (same behaviour as 'capiinit')

*capi4k-utils-20050718 (18 Jul 2005)

  18 Jul 2005; Stefan Briesenick <sbriesen@gentoo.org>
  +capi4k-utils-20050718.ebuild:
  version bump

  26 Jun 2005; Stefan Briesenick <sbriesen@gentoo.org>
  capi4k-utils-20050509.ebuild:
  compile fixes for amd64 (see bug #93535)

  17 Jun 2005; Stefan Briesenick <sbriesen@gentoo.org>
  capi4k-utils-20050509.ebuild:
  x86 stable

  30 May 2005; Stefan Schweizer <genstef@gentoo.org> files/capi.hotplug:
  some capi.hotplug cleanups

*capi4k-utils-20050509 (16 May 2005)

  16 May 2005; Stefan Schweizer <genstef@gentoo.org> files/capi.conf,
  files/capi.confd, files/capi.hotplug, files/capi.usermap,
  +capi4k-utils-20050509.ebuild: