@@ -1,30 +1,90 @@
-MD5 4a502044664c9973cfbaeb12a9df1aec ChangeLog 8293
+MD5 d876ca813fe00a27df6a9eeb72fd0b85 ChangeLog 8414
+RMD160 539a7150c51c586627e10b2ffa7856e73b6450ad ChangeLog 8414
+SHA256 1308c1b17c29fc70f9f1870edad032a0ecc8d949aa7100c91417640aecebfbf6 ChangeLog 8414
 MD5 5dc6f506ad44aae8328d0690e94eb688 capi4k-utils-20041006-r5.ebuild 3736
+RMD160 0ee728c3bb0a6bb1e93929198f3a5dcffc5e03bc capi4k-utils-20041006-r5.ebuild 3736
+SHA256 0b3466c68152e111e24721fe609208009db42f596737b13810783d577586dec2 capi4k-utils-20041006-r5.ebuild 3736
 MD5 c5a706bb72295f4e108225e00c37f3ba capi4k-utils-20050509.ebuild 3972
-MD5 45c08a2cf59e93b48140cc439e5ca8a4 capi4k-utils-20050718-r1.ebuild 5078
+RMD160 d9b7bc8a14cf37e0577f98f99b5ed58284a08d99 capi4k-utils-20050509.ebuild 3972
+SHA256 95e06eb7bf29ddcf0d7609bba0c57f8114d7b9e4669c1aa456b4f97bcfdef766 capi4k-utils-20050509.ebuild 3972
+MD5 c36fcff36f535150d4ab666ed2cb9021 capi4k-utils-20050718-r1.ebuild 5076
+RMD160 b1e7eab82d4448c4f2a9da233caa2515bc7df574 capi4k-utils-20050718-r1.ebuild 5076
+SHA256 c0ffa2c40d5d5514c842fc14acfb1e33d82a47129fce1c0488e18ea107dab918 capi4k-utils-20050718-r1.ebuild 5076
 MD5 2c1a45b850f5072a7e30fb95cada2fa0 capi4k-utils-20050718.ebuild 3978
+RMD160 ca4b6a9d5ea5e41ab36278d249a4a95550b900f8 capi4k-utils-20050718.ebuild 3978
+SHA256 e7c505a0c5dce3277d642e9840229c27dba5fd125b2c52bf8ae464f4ab8a352f capi4k-utils-20050718.ebuild 3978
 MD5 e74f9b822b6f485ca6ff834c2699151a files/20041006/README.gentoo 1492
+RMD160 4d20f69323c1a23d8611bc73733b24d290b4aad4 files/20041006/README.gentoo 1492
+SHA256 cb1731784b0a693580ca65538fc06f608056380a34e55658f73900cc78030be9 files/20041006/README.gentoo 1492
 MD5 650c413593fe44524150e1365965cdb3 files/20041006/capi.blacklist 455
+RMD160 d72b4f1c480bcb82ec21aa972490539ceeb70929 files/20041006/capi.blacklist 455
+SHA256 885482f1558618d382fdedaa23e004c2029294c4a243ed8c634919ee640458df files/20041006/capi.blacklist 455
 MD5 fb9f9b4003d8d1647e23cf7b329386f6 files/20041006/capi.confd 424
+RMD160 6b527c36e35372750b29eae4f3f82591d5133515 files/20041006/capi.confd 424
+SHA256 5e18ee17f6b2cdd2d685ff9926b9a3bde9f3f1e01469033d38c2003b23fe7c82 files/20041006/capi.confd 424
 MD5 2ddf9c04a03949cb2301888586096bfe files/20041006/capi.hotplug 2435
+RMD160 c70e758239a1962f499cb9d44035cce74c8b74f8 files/20041006/capi.hotplug 2435
+SHA256 4f511afcc34792bcd947a80bddf00c1c18a45f0e682d642176015819970cdacb files/20041006/capi.hotplug 2435
 MD5 1954a92bd07c3e2dfcfe1d68d8a290d8 files/20041006/capi.initd 1297
+RMD160 e880c79650490bde705ced5cee02f159905035e7 files/20041006/capi.initd 1297
+SHA256 d305d3fe3838151f632a733b787456259f51fe7add54f4e54150536a39a6bbef files/20041006/capi.initd 1297
 MD5 fa4cf0be46c4a16a2ef6fd178ed54c01 files/20041006/capi.usermap 1504
+RMD160 235f25fb3725882b38534e093e014a499cbd5e05 files/20041006/capi.usermap 1504
+SHA256 98595fc1e0d6ee3d715a6e032214bb6f243c88d55bf2e627b5181f0d434ae626 files/20041006/capi.usermap 1504
 MD5 edc50538053b658093927f9fb28c3aff files/20041006/config 195
+RMD160 73c580942621e1e4fcbe75c7953c5122206be67f files/20041006/config 195
+SHA256 961697c42ebbf04ba5f0e9b7aa84129580445e80ebc4ab3d8fafa6dae0987717 files/20041006/config 195
 MD5 2fe94d2623c5b129780b72bacaf4a7bc files/20041006/rcapid.xinetd 236
+RMD160 070f398e02331f62849d0ff9469beae6d14076ef files/20041006/rcapid.xinetd 236
+SHA256 c0bed83e2e4b7eb08ef7be5f2d3ee0de97cbbb45f5043a9d037c0daca4ebf595 files/20041006/rcapid.xinetd 236
 MD5 c1f67e98c19fe5ece86b9242a00e6a38 files/README.gentoo 2800
+RMD160 20def6cfff0f413e67f017179ae00fdb17ad6ed7 files/README.gentoo 2800
+SHA256 809a82b753b12ad0bd75092ec249fe9044090eeb2c2f32b9f04cb3f46815c6fd files/README.gentoo 2800
 MD5 bc75ed1e49b13568f93fb63a37c5dc70 files/capi-isdn 287
+RMD160 ca4fd4dad2c0c1f669a8e5f793d7b2afc724a67c files/capi-isdn 287
+SHA256 2154566eae7ce6694ba54d682627bd24484f81cf885f7ffbbdd0415faba1b16a files/capi-isdn 287
 MD5 266a6a842420d7bee03b4f8e44d7062b files/capi.blacklist 335
+RMD160 658325be7cead00dfac420c846f27cef390c5ea8 files/capi.blacklist 335
+SHA256 d0c65e5df544a1f4b613f0e05b80876d161fcd68d3c187b942ef1e3e5c36ec69 files/capi.blacklist 335
 MD5 3429266c493e7d16f2db8d27bd6ce690 files/capi.conf 2087
+RMD160 e40ded18c725ac67b47341e76e007a6ca4a5d60a files/capi.conf 2087
+SHA256 3b55c9ca75322b99cc1772d9fe6591b5eda44d13c4026e4eadeb19c1cbd200c5 files/capi.conf 2087
 MD5 6bad9f4e459a6f4842a38c0f1c53123a files/capi.confd 837
+RMD160 d1223859e46ea41945765ffef0873b337319423b files/capi.confd 837
+SHA256 a733f5ddc7acc17cc201b907bf00be5eb284046447d1fb943fdb3d799c32e240 files/capi.confd 837
 MD5 87e252d1e2e88ccf3d5177f6a60e2793 files/capi.hotplug 5089
+RMD160 d64ea835e632bc5782144bec4936fc19fb4bbd7f files/capi.hotplug 5089
+SHA256 7d089b87c79ce7583abcaecbe448615a3d5ae0e3c9d614a95f7cfef55a080d33 files/capi.hotplug 5089
 MD5 3bd6c2c1d96346aaa4371bcc4dd7df24 files/capi.initd 4756
+RMD160 c33c488165711f89567f6ec51a1a90134b99aaa6 files/capi.initd 4756
+SHA256 ed1ab8d0ae3fca8ef91c07469237b3feaed7647191bd11671b0deddeaae9ec3b files/capi.initd 4756
 MD5 95524e27e1ed6d91b3de60e375f3f7f7 files/capi.pcmcia 762
+RMD160 d20e08f74b8bc5972d064257396cd1b3211a0a73 files/capi.pcmcia 762
+SHA256 9f960f018fb9baa68518a09c7039a489c5dce8c9e9351ac518996123c35f4aa5 files/capi.pcmcia 762
 MD5 6418461a6c702da694ff8f7ef944af00 files/capi.pcmcia.conf 1218
+RMD160 80494b069ae7776e3700934f0b4b8fc993f950d2 files/capi.pcmcia.conf 1218
+SHA256 2e86b2c4551fb536ef90b1f51e3b2abab423dd1bd8c75ebf0365a43001c09019 files/capi.pcmcia.conf 1218
 MD5 09d93d6fd9f60f763d38f4257f31abcd files/capi.usermap 1663
+RMD160 27b6dab9e39f79dbefdd6cffe4e814be9a99f0c5 files/capi.usermap 1663
+SHA256 6e2750a3b2b69a9ea78239cb41b2c63893a8c479fcb80dfe0b7f2b9b6bc61055 files/capi.usermap 1663
 MD5 edc50538053b658093927f9fb28c3aff files/config 195
+RMD160 73c580942621e1e4fcbe75c7953c5122206be67f files/config 195
+SHA256 961697c42ebbf04ba5f0e9b7aa84129580445e80ebc4ab3d8fafa6dae0987717 files/config 195
 MD5 5567e0f076f3d1faafcd0d4fa39a1c4e files/digest-capi4k-utils-20041006-r5 156
+RMD160 aa41c45aa5020583d72c3fb6dfc0116f05d85df5 files/digest-capi4k-utils-20041006-r5 156
+SHA256 4308b3fd8a4bd92517c8158eec40e417499299128ce4dceb64d4eb90fc1a5dbe files/digest-capi4k-utils-20041006-r5 156
 MD5 239b613eb69255eead19892de760db8d files/digest-capi4k-utils-20050509 75
+RMD160 e4fa61389ca06baab70f49668d2d7f3290bee4da files/digest-capi4k-utils-20050509 75
+SHA256 51898b8819149ff0a083d27ba95e0b6ef03cc6e5c705d4106610378540bd65dd files/digest-capi4k-utils-20050509 75
 MD5 2ab6ed3bc0de68c33e2ade1979dd4c0a files/digest-capi4k-utils-20050718 75
+RMD160 05983c4f424979030476967c432ec3be0f0b2423 files/digest-capi4k-utils-20050718 75
+SHA256 37dd2bda41426923e0db545054c7263d8b066c3040baee8a2d9736d421957c7b files/digest-capi4k-utils-20050718 75
 MD5 2ab6ed3bc0de68c33e2ade1979dd4c0a files/digest-capi4k-utils-20050718-r1 75
+RMD160 05983c4f424979030476967c432ec3be0f0b2423 files/digest-capi4k-utils-20050718-r1 75
+SHA256 37dd2bda41426923e0db545054c7263d8b066c3040baee8a2d9736d421957c7b files/digest-capi4k-utils-20050718-r1 75
 MD5 2fe94d2623c5b129780b72bacaf4a7bc files/rcapid.xinetd 236
+RMD160 070f398e02331f62849d0ff9469beae6d14076ef files/rcapid.xinetd 236
+SHA256 c0bed83e2e4b7eb08ef7be5f2d3ee0de97cbbb45f5043a9d037c0daca4ebf595 files/rcapid.xinetd 236
 MD5 57ebf0922074a9d61182c51349de5d53 metadata.xml 618
+RMD160 7dc735e007ea83f896fae31e70ce14b5410035fa metadata.xml 618
+SHA256 b99ca46c9cdbd485f0fc6c1cfe135d9e999b515da81632fb5330ebae8a3d025c metadata.xml 618
