@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/capi4k-utils
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/capi4k-utils/ChangeLog,v 1.42 2006/01/21 20:35:19 pylon Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/capi4k-utils/ChangeLog,v 1.43 2006/03/14 01:09:58 sbriesen Exp $
+
+  14 Mar 2006; Stefan Briesenick <sbriesen@gentoo.org>
+  capi4k-utils-20050718-r1.ebuild:
+  stable on x86 and amd64.
 
   21 Jan 2006; Lars Weiler <pylon@gentoo.org> capi4k-utils-20050509.ebuild:
   Stable on ppc; bug #112457.
